NXP-17846: Fix buttons alignment above content views

--- a/nuxeo-dm/nuxeo-platform-webapp-core/src/main/resources/themes/sass/forms.scss
+++ b/nuxeo-dm/nuxeo-platform-webapp-core/src/main/resources/themes/sass/forms.scss
@@ -254,7 +254,7 @@ textarea::-webkit-input-placeholder {
 .nx-page .action_bar .button,
 #selection_buttons .widgetPanel .button {
   font-size: .9em;
-  height: 2.4em;
+  height: 2.36em;
   line-height: 2.3em;
   padding: 0 1em;
 }
